--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,11 @@ main {
     background: url("../images/Plane.jpg") no-repeat center center/cover;
 }
 
+#sunset {
+    height: 500px;
+    width: 100%;
+    background: url("../images/Sunset.jpeg") no-repeat center center/cover;
+}
 
 
 /*Footer styling*/
