--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,20 @@ main {
     background: url("../images/Sunset.jpeg") no-repeat center center/cover;
 }
 
+.lanzarote {
+    width: 100%;
+    height: 200px;
+}
+
+.new-york {
+    width: 100%;
+    height: 200px;
+}
+
+.rome {
+    width: 100%;
+    height: 200px;
+}
 
 /*Footer styling*/
 footer {
