Noticed errors on the code for destination page using validator so corrected code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,12 +211,12 @@ footer {
         margin-top: 79px;
     }
 
-    #img-l {
-        width: 50%;
+    .img-l {
+        width: 40%;
     }
 
-    #text-r {
-        width: 120%;
+    .text-r {
+        width: 60%;
     }
 
     .outer-div {
