--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,7 @@ button {
     border: none;
     box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.06);
     color: white;
-    curser: pointer;
+    cursor: pointer;
     margin-bottom: 10px;
 }
 
@@ -164,7 +164,6 @@ input {
     margin: 10px;
     box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.06);
     border: none;
-    align: center;
     width: 75%;
 }
 
