--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,8 @@ main {
 
 /* Form Stylings */
 
+
+
 button {
     background-color: #49787d;
     border-radius: 5px;
@@ -149,6 +151,10 @@ button {
     color: white;
     cursor: pointer;
     margin-bottom: 10px;
+    height: 30px;
+    width: 75%;
+    align-items: center;
+    font-size: 100%
 }
 
 button:hover {
@@ -156,15 +162,26 @@ button:hover {
 }
 
 form {
-    text-align: center;
+    text-align: left;
+    display: inline-block;
+    margin-left: -10px;
+
 }
 
 input {
     padding: 0 1rem;
-    margin: 10px;
     box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.06);
     border: none;
-    width: 75%;
+    width: 100%;
+    height: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+
+
+label {
+    display: block
 }
 
 /*Footer styling*/
@@ -223,6 +240,11 @@ footer {
     }
 
     input {
-        width: 50%;
+        width: 200%;
     }
+
+    form {
+        margin-left: -100px;
+    }
+
 }
